    - debian/patches/02_libtool.patch: Likewise.
    - debian/patches/03_gcc-4.0.patch: Likewise.
    - debian/patches/04_no_pcibios_init.patch: Removed.
  * Added Brazilian Portuguese debconf translation. (Closes: #301734)
    Thanks to Rodrigo Tadeu Claro <rlinux@cipsga.org.br>.
  * Added Vietnamese debconf translation. (Closes: #313170)
    Thanks to Clytie Siddall <clytie@riverland.net.au>.
  * Enable the pseudo NIC interface to be used with EtherBoot and document
    the addition in the README.Debian file.
    Thanks to Robert Millan <rmh@aybabtu.com> for the pointer.
  * Cosmetic cleaning of README.Debian.
  * Provide a symlinked manpage for bochs-bin.
  * Add a man page for sb16ctrl.
  * Explicitly state architectures and stop using type-handling.
  * Add libaa1-dev as an alternative Build-Dependency to aalib1-dev.
  * Replace xlibs-dev Build-Depepends with the fain grained only ones
    needed: libx11-dev, libxpm-dev, libice-dev, libsm-dev.
  * Do not use a stamp file for configure.
  * Add Debian Subversion repository URL.
  * Update copyright year.
  * Update watch file to version 3 (no changes needed).
  * Now using Standards-Version 3.6.2 (no changes needed).
  * Use new QA SourceForge watch redirector.
  * Use new dpkg-architecture variables for os and cpu.
  * C++ ABI transition.
    - Remove special case for m68k to use g++-3.4.

 -- Guillem Jover <guillem@debian.org>  Wed, 30 Mar 2005 01:46:23 +0300

bochs (2.1.1+20041109-3) unstable; urgency=high

  * Remove rombios pcibios initialization code. It lets the virtual box
    in a state inconsitent with what qemu expects.
    - debian/patches/04_no_pcibios_init.patch: New file.
    (Closes: #281862, #283166, #284132, #285752)

 -- Guillem Jover <guillem@debian.org>  Tue, 11 Jan 2005 18:36:23 +0100

bochs (2.1.1+20041109-2) unstable; urgency=high

  * Build-Depends and use gcc-3.4 on m68k to avoid an ICE. (Closes: #284050)
  * Fix build failure with gcc-4.0. (Closes: #284748)