@@ -27,6 +27,69 @@ diff -Naur bochs-2.1.1+20041109/doc/man/bochsrc.5 bochs-2.1.1+20041109.doc/doc/m
  .TH bochsrc 5 "26 Mar 2005" "bochsrc" "The Bochs Project"
  .\"SKIP_SECTION"
  .SH NAME
+@@ -122,7 +122,7 @@
+ F0000-FFFFF) and the videobios (located at C0000-C7FFF).
+ Those ROM images will be initialized by the bios if they contain
+ the right signature (0x55AA).
+-It can also be a convenient way to upload some arbitary code/data
++It can also be a convenient way to upload some arbitrary code/data
+ in the simulation, that can be retrieved by the boot loader
+ 
+ Example:
+@@ -202,7 +202,7 @@
+    spt=        only valid for disks
+    status=     only valid for cdroms [inserted|ejected]
+    biosdetect= type of biosdetection [none|auto], only for disks on ata0 [cmos]
+-   translation=type of transation of the bios, only for disks [none|lba|large|rechs|auto]
++   translation=type of translation of the bios, only for disks [none|lba|large|rechs|auto]
+    model=      string returned by identify device command
+    journal=    optional filename of the redolog for undoable and volatile disks
+    
+@@ -467,7 +467,7 @@
+ dmatimer:
+ 
+ Microseconds per second for a DMA cycle.  Make
+-it smaller to fix non-continous sound.  750000
++it smaller to fix non-continuous sound.  750000
+ is  usually  a  good  value.    This  needs  a
+ reasonably  correct   setting  for  IPS   (see
+ below).
+@@ -570,7 +570,7 @@
+ 
+ sync
+ 
+-TO BE COMPLETED (see Greg explaination in bug #536329)
++TO BE COMPLETED (see Greg explanation in bug #536329)
+ 
+ time0
+ 
+@@ -668,7 +668,7 @@
+ 
+ ethmod:
+ The ethmod value defines which low level OS specific module to be used
+-to access pysical ethernet interface. Current implemented values include
++to access physical ethernet interface. Current implemented values include
+  - fbsd   : ethernet on freebsd and openbsd
+  - linux  : ethernet on linux
+  - win32  : ethernet on win32
+@@ -691,7 +691,7 @@
+ binary releases.
+ 
+ script:
+-The script value is optionnal, and is the name of a script that
++The script value is optional, and is the name of a script that
+ is executed after bochs initialize the network interface. You can use
+ this script to configure this network interface, or enable masquerading.
+ This is mainly useful for the tun/tap devices that only exist during
+@@ -782,7 +782,7 @@
+ Lesser General Public License as published  by  the  Free
+ Software  Foundation.  See  the  COPYING file located  in
+ /usr/local/share/doc/bochs/ for details on the license and
+-the lack of warrantee.
++the lack of warranty.
+ .\"SKIP_SECTION"
+ .SH AVAILABILITY
+ The latest version of this program can be found at:
 diff -Naur bochs-2.1.1+20041109/doc/man/bxcommit.1 bochs-2.1.1+20041109.doc/doc/man/bxcommit.1
 --- bochs-2.1.1+20041109/doc/man/bxcommit.1	2004-10-09 17:58:47.000000000 +0200
 +++ bochs-2.1.1+20041109.doc/doc/man/bxcommit.1	2004-12-04 07:21:37.000000000 +0100
